# ZeroMQCxxAPI

./: CMakeLists.txt  LibZeroMQ.project  LibZeroMQ.workspace  README.md
ZMQClientTester/: CMakeLists.txt  main.cpp
ZMQServerTester/: CMakeLists.txt  main.cpp
ZeroMQ4CxxAPI/: CMakeLists.txt  ZMQContext.cpp  ZMQContext.h  ZMQException.cpp  ZMQException.h  ZMQExports  ZMQMessage.cpp  ZMQMessage.h  ZMQSocket.cpp  ZMQSocket.h
cmake/Modules/: FindwxWidgetsMinGW.cmake
zeromq-4.0.4/: CMakeLists.txt
zeromq-4.0.4/src/: windows.hpp
