project(ZeroMQ4CxxAPI)

file(GLOB SRCS "*.cpp")
if ( NOT UNIX )
    include(FindwxWidgetsMinGW)
    include_directories(${CMAKE_SOURCE_DIR}/zeromq-4.0.4/include)
    include_directories(${CMAKE_SOURCE_DIR}/zeromq-4.0.4/builds/msvc)
    include_directories(${wxWidgets_INCLUDE_DIRS})
    
    add_definitions(-DDLL_EXPORT)
    add_definitions(-D__MINGW32__)
    add_definitions(-DBUILDING_DLL)
    add_definitions( "${wxWidgets_CXX_FLAGS}" )
    add_definitions( "${wxWidgets_DEFINITIONS}" )
else ()
    add_definitions(-fPIC)
    include_directories(${CMAKE_SOURCE_DIR}/zeromq-4.0.4/include)
    find_package(wxWidgets COMPONENTS std REQUIRED)
endif()

add_library(ZeroMQ4CxxAPI SHARED ${SRCS})
target_link_libraries(ZeroMQ4CxxAPI Ws2_32)
target_link_libraries(ZeroMQ4CxxAPI ${wxWidgets_LIBRARIES})
target_link_libraries(ZeroMQ4CxxAPI ZeroMQ4)
